Fixed pages edges having gap

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
     font-family: "Roboto";
+    padding: 0;
+    margin: 0;
 }
 
 /*Section 1 Content Styling*/
